--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
 - sudo apt-get update -qq
 - sudo apt-get install libhdf5-serial-dev
 - sudo apt-get install zlib1g-dev
+- sudo apt-get install libsz2
 - sudo apt-get install libbz2-dev
 - sudo apt-get install liblzma-dev
 - sudo apt-get install autotools-dev
